components/Countdowns/ElectionCountdown: Adjust header text max-width to minimise derpy line wraps; ensure paragraph margin behaviour consistent with dotorg and avoid unwanted bottom margin on header [refs #3927]

--- a/src/components/Countdowns/ElectionCountdown.module.scss
+++ b/src/components/Countdowns/ElectionCountdown.module.scss
@@ -11,10 +11,11 @@
   }
 
   .header {
+    max-width: 17%;
+    margin-bottom: 0;
     color: $amber;
     font-size: 0.75em;
     font-weight: $fw-semi-bold;
-    max-width: 20%;
   }
 
   .time {
